feat: update things

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap" rel="stylesheet">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script defer src="js/simple-sidebar.js"></script>
     <script defer src="js/bootstrap.min.js"></script>
@@ -203,6 +206,7 @@
                             <h3 class="md-text-left">
                                 JARDIN VERTICAL NARTURAL 2
                             </h3>
+                            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS 2</button>
                         </div>
@@ -220,6 +224,7 @@
                             <h3 class="md-text-left">
                                 JARDIN VERTICAL NARTURAL 3
                             </h3>
+                            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS 3</button>
                         </div>
@@ -237,6 +242,7 @@
                             <h3 class="md-text-left">
                                 JARDIN VERTICAL NARTURAL 4
                             </h3>
+                            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS 4</button>
                         </div>
@@ -254,6 +260,7 @@
                             <h3 class="md-text-left">
                                 JARDIN VERTICAL NARTURAL 5
                             </h3>
+                            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS 5</button>
                         </div>
@@ -291,7 +298,7 @@
                 <div>
                     <img class="info__logo" src="images/LOGO.png" alt="LOGO">
                 </div>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled baloo">
                     <li>
                         <a href="#">
                             <div>
@@ -348,6 +355,7 @@
     </footer>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     <script type="text/javascript" src="js/wow.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
         new WOW().init();
 
