feat: update things2

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap" rel="stylesheet">
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script defer src="js/simple-sidebar.js"></script>
-    <script defer src="js/bootstrap.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,6 +47,7 @@
                         </li>
                         <li>
                             <a
+                                class="hover-horizontal"
                                 href="#jardin-vertical"
                                 aria-controls="jardin-vertical"
                                 >JARDIN VERTICAL
@@ -58,6 +55,7 @@
                         </li>
                         <li>
                             <a
+                                class="hover-horizontal"
                                 href="#tipos-de-jardin"
                                 aria-controls="tipos-de-jardin"
                                 >TIPOS DE JARDIN
@@ -65,6 +63,7 @@
                         </li>
                         <li>
                             <a
+                                class="hover-horizontal"
                                 href="#instalacion"
                                 aria-controls="instalacion"
                                 >INSTALACIóN
@@ -81,7 +80,7 @@
         <div class="inner-hero text-uppercase ">
             <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">Jardines Verticales las palmas</h1>
             <h4 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">Crear un mundo más verdad</h4>
-            <button class="text-uppercase wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">quiero saber mas</button>
+            <button class="text-uppercase hover-horizontal wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">quiero saber mas</button>
         </div>
     </section>
     <section id="jardin-vertical" class="articles">
@@ -109,7 +108,7 @@
             <img class="patch-img wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="planta">
         </div>
         <div class="content__button">
-            <button class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
+            <button class="wow fadeInUp hover-horizontal" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
         </div>
     </section>
     <section id="tipos-de-jardin" class="tipos">
@@ -190,7 +189,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button>SABER MAS 1</button>
+                            <button class="hover-horizontal">SABER MAS 1</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -208,7 +207,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button>SABER MAS 2</button>
+                            <button class="hover-horizontal">SABER MAS 2</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -226,7 +225,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button>SABER MAS 3</button>
+                            <button class="hover-horizontal">SABER MAS 3</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -244,7 +243,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button>SABER MAS 4</button>
+                            <button class="hover-horizontal">SABER MAS 4</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -262,7 +261,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button>SABER MAS 5</button>
+                            <button class="hover-horizontal">SABER MAS 5</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -335,7 +334,7 @@
                     </li>
                 </ul>
             </div>
-            <button>QUIERO SABER MAS</button>
+            <button class="hover-horizontal">QUIERO SABER MAS</button>
         </div>
     </section>
     <footer>
@@ -354,8 +353,12 @@
         </div>
     </footer>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/simple-sidebar.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
     <script>
         new WOW().init();
 
