--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLOR & DESIGN</title>
-    <link rel="stylesheet" href="css/simple-sidebar.css">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/simple-sidebar.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed right-toggle" data-toggle="collapse" data-target="#target-bar" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="#" class="navbar-brand">
-                        <img src="images/LOGO.png" alt="LOGO">
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse" id="target-bar">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed right-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">
+                    <img src="images/LOGO.png" alt="LOGO">
+                </a>
+            </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <div class="contactanos col-md-2 nav navbar-right">
                         <div class="contactanos__icon">
                             <img src="icons/telefono-sonando.svg" alt="telefono">
@@ -352,6 +354,45 @@
             </div>
         </div>
     </footer>
+            <div class="sidebar-wrapper right">
+                <ul  class="sidebar-nav">
+                    <li class="active">
+                        <a
+                            href="#portada"
+                            aria-controls="portada"
+                            >PORTADA
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="#jardin-vertical"
+                            aria-controls="jardin-vertical"
+                            >JARDIN VERTICAL
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="#tipos-de-jardin"
+                            aria-controls="tipos-de-jardin"
+                            >TIPOS DE JARDIN
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="#instalacion"
+                            aria-controls="instalacion"
+                            >INSTALACIóN
+                        </a>
+                    </li>
+                    <div class="contactanos col-md-2 nav navbar-right">
+                        <div class="contactanos__icon">
+                            <img src="icons/telefono-sonando.svg" alt="telefono">
+                        </div>
+                        <p>¡Contactanos</p>
+                        <h4>600 000 000</h4>
+                    </div>
+                </ul>
+            </div>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
