--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <section id="tipos-de-jardin" class="tipos">
         <h1>TIPOS DE JARDINES VERTICALES</h1>
         <div class="skew_container">
+            <!-- <img src="icons/Forma_corte_fondo_verde.svg" alt=""> -->
             <div class="bg-skew">
                 <div class="inner-skew">
                     <div class="content_ul">
