--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="hover-horizontal">SABER MAS 1</button>
+                            <button class="hover-horizontal">SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
@@ -208,15 +208,15 @@
                         id="article_2">
                         <div class="the_article">
                             <h3 class="md-text-left">
-                                JARDIN VERTICAL NARTURAL 2
+                                JARDIN TROPICAL NATURAL
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="hover-horizontal">SABER MAS 2</button>
+                            <button class="hover-horizontal">SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
-                                <img src="images/IMG_VIDEO.jpeg" alt="planta">
+                                <img src="images/Jardín_tropical_clienta-1024x672.jpeg" alt="planta">
                             </div>
                         </div>
                     </div>
@@ -226,15 +226,15 @@
                         id="article_3">
                         <div class="the_article">
                             <h3 class="md-text-left">
-                                JARDIN VERTICAL NARTURAL 3
+                                JARDIN TROPICAL NUEVO
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="hover-horizontal">SABER MAS 3</button>
+                            <button class="hover-horizontal">SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
-                                <img src="images/IMG_VIDEO.jpeg" alt="planta">
+                                <img src="images/Jardín_y_diseño_tropic-1024x659.jpeg" alt="planta">
                             </div>
                         </div>
                     </div>
@@ -244,15 +244,15 @@
                         id="article_4">
                         <div class="the_article">
                             <h3 class="md-text-left">
-                                JARDIN VERTICAL NARTURAL 4
+                                JARDIN VERTICAL NARTURAL
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="hover-horizontal">SABER MAS 4</button>
+                            <button class="hover-horizontal">SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
-                                <img src="images/IMG_VIDEO.jpeg" alt="planta">
+                                <img src="images/PROYECTO_2.jpeg" alt="planta">
                             </div>
                         </div>
                     </div>
@@ -262,15 +262,15 @@
                         id="article_5">
                         <div class="the_article">
                             <h3 class="md-text-left">
-                                JARDIN VERTICAL NARTURAL 5
+                                JARDIN VERTICAL NARTURAL
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="hover-horizontal">SABER MAS 5</button>
+                            <button class="hover-horizontal">SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
-                                <img src="images/IMG_VIDEO.jpeg" alt="planta">
+                                <img src="images/PROYECTO_3.jpeg" alt="planta">
                             </div>
                         </div>
                     </div>
