--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
     <section id="tipos-de-jardin" class="tipos">
         <h1>TIPOS DE JARDINES VERTICALES</h1>
         <div class="skew_container">
-            <!-- <img src="icons/Forma_corte_fondo_verde.svg" alt=""> -->
             <div class="bg-skew">
                 <div class="inner-skew">
                     <div class="content_ul">
@@ -190,7 +189,7 @@
                         id="article_1">
                         <div class="the_article">
                             <h3 class="md-text-left">
-                                JARDIN VERTICAL NARTURAL 1
+                                JARDIN VERTICAL NARTURAL
                             </h3>
                             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
