--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
         </div>
     </section>
     <section id="instalacion" class="install row">
-        <div class="col-lg-5 col-md-6 col-sm-12 install_img">
+        <div class="col-lg-6 col-sm-6 install_img">
             <img class="" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
         </div>
-        <div class="col-lg-4 col-md-6 install__article">
+        <div class="col-lg-5 col-sm-6 install__article">
             <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">INSTALACIÓN</h1>
             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
             <p class="text-justify wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.3s">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
