review finish day3

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="jardin-vertical" class="articles">
         <div class="article__one">
             <article class="wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s">
-                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">
+                <h1>
                     <span>
                         <img src="icons/simboloFaD.svg" alt="icon">
                     </span> JARDINES VERTICALES</h1>
@@ -107,7 +107,7 @@
             <article class="wow slideInRight" data-wow-duration="1.2s" data-wow-delay="0.3s">
                 <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">VENTAJAS Y CUALIDADES</h1>
                 <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+                <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <img class="patch-img wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="planta">
         </div>
