--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
             </div>
             <article class="wow slideInRight" data-wow-duration="1.2s" data-wow-delay="0.3s">
-                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">VENTAJAS Y CUALIDADES</h1>
+                <h1>VENTAJAS Y CUALIDADES</h1>
                 <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                 <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
