--- a/index.html
+++ b/index.html
@@ -38,38 +38,38 @@
                         <div class="contactanos__icon">
                             <img src="icons/telefono-sonando.svg" alt="telefono">
                         </div>
-                        <p>¡Contactanos</p>
+                        <p>¡Contactanos!</p>
                         <h4>600 000 000</h4>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active">
                             <a
-                                href="#portada"
-                                aria-controls="portada"
+                                href="#PORTADA"
+                                aria-controls="PORTADA"
                                 >PORTADA <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li>
                             <a
                                 class="hover-horizontal"
-                                href="#jardin-vertical"
-                                aria-controls="jardin-vertical"
+                                href="#JARDIN-VERTICAL"
+                                aria-controls="JARDIN-VERTICAL"
                                 >JARDIN VERTICAL
                             </a>
                         </li>
                         <li>
                             <a
                                 class="hover-horizontal"
-                                href="#tipos-de-jardin"
-                                aria-controls="tipos-de-jardin"
+                                href="#TIPOS-DE-JARDIN"
+                                aria-controls="TIPOS-DE-JARDIN"
                                 >TIPOS DE JARDIN
                             </a>
                         </li>
                         <li>
                             <a
                                 class="hover-horizontal"
-                                href="#instalacion"
-                                aria-controls="instalacion"
+                                href="#INSTALACIÓN"
+                                aria-controls="INSTALACIÓN"
                                 >INSTALACIóN
                             </a>
                         </li>
@@ -77,7 +77,7 @@
                 </div>
         </nav>
     </header>
-    <section id="portada" class="section__hero">
+    <section id="PORTADA" class="section__hero">
         <div class="hero--skew">
             <div class="hero__img"></div>
         </div>
@@ -87,7 +87,7 @@
             <button class="text-uppercase hover-horizontal wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">quiero saber mas</button>
         </div>
     </section>
-    <section id="jardin-vertical" class="articles">
+    <section id="JARDIN-VERTICAL" class="articles">
         <div class="article__one">
             <article class="wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s">
                 <h1>
@@ -115,7 +115,7 @@
             <button class="wow fadeInUp hover-horizontal" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
         </div>
     </section>
-    <section id="tipos-de-jardin" class="tipos">
+    <section id="TIPOS-DE-JARDIN" class="tipos">
         <h1>TIPOS DE JARDINES VERTICALES</h1>
         <div class="skew_container">
             <div class="bg-skew">
@@ -279,7 +279,7 @@
             </div>
         </div>
     </section>
-    <section id="instalacion" class="install row">
+    <section id="INSTALACIÓN" class="install row">
         <div class="col-lg-6 col-sm-6 install_img">
             <img class="" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
         </div>
@@ -360,29 +360,29 @@
                 <ul  class="sidebar-nav">
                     <li class="active">
                         <a
-                            href="#portada"
-                            aria-controls="portada"
+                            href="#PORTADA"
+                            aria-controls="PORTADA"
                             >PORTADA
                         </a>
                     </li>
                     <li>
                         <a
-                            href="#jardin-vertical"
-                            aria-controls="jardin-vertical"
+                            href="#JARDIN-VERTICAL"
+                            aria-controls="JARDIN-VERTICAL"
                             >JARDIN VERTICAL
                         </a>
                     </li>
                     <li>
                         <a
-                            href="#tipos-de-jardin"
-                            aria-controls="tipos-de-jardin"
+                            href="#TIPOS-DE-JARDIN"
+                            aria-controls="TIPOS-DE-JARDIN"
                             >TIPOS DE JARDIN
                         </a>
                     </li>
                     <li>
                         <a
-                            href="#instalacion"
-                            aria-controls="instalacion"
+                            href="#INSTALACIÓN"
+                            aria-controls="INSTALACIÓN"
                             >INSTALACIóN
                         </a>
                     </li>
@@ -390,7 +390,7 @@
                         <div class="contactanos__icon">
                             <img src="icons/telefono-sonando.svg" alt="telefono">
                         </div>
-                        <p>¡Contactanos</p>
+                        <p>¡Contactanos!</p>
                         <h4>600 000 000</h4>
                     </div>
                 </ul>
