--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLOR & DESIGN</title>
-
+    <!-- estilo bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- menú doble con manto -->
     <link rel="stylesheet" href="css/simple-sidebar.css">
+
+    <!-- WOW Animate -->
     <link rel="stylesheet" href="css/animate.css">
+
+    <!-- estilo css -->
     <link rel="stylesheet" href="styles.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- - - FUENTES - - -->
 
+    <!-- font-family: 'Poppins', sans-serif; -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+
+    <!-- font-family: 'Baloo 2', cursive; -->
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap" rel="stylesheet">
+
     <!--  font-family: 'Open Sans', sans-serif; -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
@@ -395,16 +405,12 @@
                     </div>
                 </ul>
             </div>
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/simple-sidebar.js"></script>
+    <script src="js/simple-sidebar.js"></script><!-- menú doble con manto -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script>
         new WOW().init();
-
         $(".menu-toggle-sidebar").click(function(e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
